--- a/package.json
+++ b/package.json
@@ -51,10 +51,15 @@
             "@types/react": "^19.2.7",
             "@types/react-dom": "^19.2.3",
             "@vitejs/plugin-react-swc": "^3.10.2",
+            "gh-pages": "^6.3.0",
             "vite": "^6.4.1"
       },
       "scripts": {
-            "dev": "vite",
-            "build": "vite build"
+      "dev": "vite",
+      "build": "vite build",
+      "predeploy": "npm run build",
+      "deploy": "gh-pages -d dist"
       }
+
+      
 }
